--- a/index.html
+++ b/index.html
@@ -118,14 +118,6 @@ body {
 }
 
 
-#jumpscare video {
-    position: fixed;
-    top:0; left:0;
-    width:100%; height:100%;
-    object-fit: cover;
-    z-index: 9999;
-}
-
 .highlight-link {
     color: var(--accent-pink);
     font-weight: 600;
@@ -165,8 +157,8 @@ if(referrer.includes(allowedRef)) {
         <h1>Access Granted</h1>
         <p>Copy your code below:<br>
         Enter it on this Website: 
-        <a href="https://aservice.pages.dev/" target="_blank" class="highlight-link">
-            https://aservice.pages.dev/
+        <a href="https://eldarx.pages.dev/" target="_blank" class="highlight-link">
+            https://eldarx.pages.dev/
         </a>
         </p>
         <div class="code-box" id="codeBox">${yourCode}</div>
