--- a/index.html
+++ b/index.html
@@ -150,15 +150,15 @@ const allowedRef = "https://linkvertise.com/";
 const referrer = document.referrer;
 const hero = document.getElementById("heroContent");
 
-const yourCode = "187679";
+const yourCode = "142957";
 
 if(referrer.includes(allowedRef)) {
     hero.innerHTML = `
         <h1>Access Granted</h1>
         <p>Copy your code below:<br>
         Enter it on this Website: 
-        <a href="https://eldarx.pages.dev/" target="_blank" class="highlight-link">
-            https://eldarx.pages.dev/
+        <a href="https://eldarx-site.pages.dev/" target="_blank" class="highlight-link">
+            https://eldarx-site.pages.dev/
         </a>
         </p>
         <div class="code-box" id="codeBox">${yourCode}</div>
